Fix sign in button behind non-iframe h5p content
on firefox

--- a/styles/hide-h5p-for-anonymous-users.scss
+++ b/styles/hide-h5p-for-anonymous-users.scss
@@ -42,5 +42,6 @@ $light-blue: #d0ece9;
 	.h5p-actions {
 		filter: blur(5px);
 		pointer-events: none;
+		z-index: 0;
 	}
 }
